# talk-bridge-live

./: .gitignore  package.json  tsconfig.json  vite.config.ts
config/envoy/: envoy.yaml
config/nginx/: nginx.conf
grpc/: grpc_build.bat  grpc_build.sh
src/: App.scss  App.tsx  logger.ts  logging.ts  main.tsx  style-utils.ts  types.ts
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lib/whisper-rs/sys/: build.rs
src-tauri/lib/whisper-rs/sys/whisper.cpp/samples/: .gitignore
src-tauri/src/: app_state.rs  audio.rs  device.rs  grpc_client.rs  language.rs  lib.rs  logger.rs  main.rs  protos_gen.rs  silero_vad.rs  speech_translation.rs  utils.rs
src-tauri/src/audio/: audio_context.rs  audio_node.rs  audio_recorder.rs  context.rs  node.rs  nodes.rs  recorder.rs  transcription.rs  voice_recorder.rs
src-tauri/src/audio/audio_node/: assembler_node.rs  concatenation_node.rs  gain_node.rs  persistence_node.rs  reassembly_node.rs  source_node.rs  speech_assembler_node.rs  speech_context_node.rs  speech_extractor_node.rs  speech_translator_node.rs  vad_node.rs  vocal_isolation_node.rs  wav_writer_node.rs
src-tauri/src/audio/context/: microphone_context.rs  node.rs
src-tauri/src/audio/context/node/: concatenation.rs  gain_control.rs  persistence.rs  speech_recognition.rs  stream_input.rs  text_translation.rs  transcript.rs  translation.rs  vocal_isolation.rs  voice_activity_detection.rs
src-tauri/src/audio/node/: concatenation.rs  gain_control.rs  gain_node.rs  persistence.rs  source_node.rs  speech_recognition.rs  stream_input.rs  text_translation.rs  vad_node.rs  vocal_isolation.rs  voice_activity_detection.rs
src-tauri/src/audio/nodes/: gain_node.rs  vad_node.rs
src-tauri/src/device/: device_manager.rs
src-tauri/src/device/input/: microphone.rs
src-tauri/src/grpc_client/: speech_translator_client.rs
src-tauri/src/hardware/input/: microphone.rs
src-tauri/src/utils/: time_utils.rs  wav_utils.rs
src-wasm/: Cargo.toml
src/icons/: index.ts
src/route/: talk-bridge-live-route.tsx
src/store/: store.ts
src/tauri-services/: tauri-audio-recorder-service.ts  (+4 more)
wasm/: update.js
(+87 files in other folders)
