[package]
name = "talk-bridge-live"
version = "0.1.0"
description = "Talk-Bridge-Live is a real-time translation app designed to facilitate seamless communication during meetings across multiple languages."
authors = ["mengen.dai@advantest.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "talk_bridge_live_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4.27"
cpal = "0.15.3"
hound = "3.5.1"
whoami = "1.6.0"
serde = "1.0.219"
rubato = "0.16.2"
chrono = "0.4.40"
tokio-macros = "2.5.0"
tauri-plugin-opener = "2"
tauri-plugin-log = "2.3.1"
voice_activity_detector = "0.2.0"
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "1.44.1", features = ["full"] }

